--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
                                             xmlns:dct="http://purl.org/dc/terms/"
                                             xmlns:foaf="http://xmlns.com/foaf/0.1/"
                                             xmlns:sioc="http://rdfs.org/sioc/ns#"
-                                            xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
->
-
+                                            xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#">
 
     <head>
 
