--- a/index.html
+++ b/index.html
@@ -99,18 +99,23 @@
 
         </div> <!-- row -->
 
+
+
         <div class="row">
             <div class="six columns">
                 <section class="main">
+                    <!--
                     <h3>papers</h3>
-                    <li><a href="files/Messerli-Simon_CASE-Poster.pdf" target="_blank">RDF Graphen validieren - Plakat [Januar 2016]</a></li>
-                    <li><a href="files/Messerli-Simon_CASE-Schlussbericht.pdf" target="_blank">RDF Graphen validieren - Bericht [Januar 2016]</a></li>
+                    <li>- Will follow soon</li>
+                    -->
                 </section>
             </div> <!-- six columns -->
             <div class="six columns">
                 <section class="main">
+                    <!--
                     <h3>mini projects</h3>
                     <li>- Will follow soon</li>
+                    -->
                     
                     <!-- waiting for https
                     <h5>there is still a lot of work ahead</h5>
